--- a/lib/kamansky_web/live/order_live/index.html.leex
+++ b/lib/kamansky_web/live/order_live/index.html.leex
@@ -8,7 +8,7 @@
       <div class="alert alert-success"><%= live_flash(@flash, :info) %></div>
     </div>
   <% end %>
-  <%= if @live_action in [:pending, :new] do %>
+  <%= if @live_action in [:mark_processed, :pending, :new] do %>
     <div class="text-end mb-2">
       <%= live_patch "Create Order",
         to: Routes.order_index_path(@socket, :new),
