--- a/lib/kamansky_web/live/statistics_live/show.html.leex
+++ b/lib/kamansky_web/live/statistics_live/show.html.leex
@@ -116,7 +116,7 @@
                     <%= group_name %>:
                     <span class="text-danger ms-2">
                       <%= format_decimal_as_currency(
-                        Map.get(@statistics, String.to_existing_atom("#{group_key}_shipping_fees"))
+                        Map.get(@statistics, String.to_existing_atom("#{group_key}_selling_fees"))
                       ) %>
                     </span>
                   </button>
