--- a/lib/kamansky_web/live/statistics_live/show.html.leex
+++ b/lib/kamansky_web/live/statistics_live/show.html.leex
@@ -1,241 +1,48 @@
 <h1><%= @page_title %></h1>
 <section>
-  <h3>Sales</h3>
-  <div id="sales-accordion" class="accordion">
-    <div
-      id="gross-profit-accordion-item"
-      class="accordion-item"
-      phx-hook="accordionHook"
-      data-info="gross_profit"
-    >
-      <div class="accordion-header" phx-update="ignore">
-        <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#gross_profit-collapse"
-        >
-          Gross Profit: <span class="text-success ms-2"><%= format_decimal_as_currency(@statistics.gross_profit) %></span>
-        </button>
-      </div>
-      <div id="gross_profit-collapse" class="accordion-collapse collapse" data-bs-parent="#sales-accordion">
-        <div class="accordion-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Order Number</th>
-                <th>Order Date</th>
-                <th>Gross Profit</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= for order <- @orders do %>
-                <tr>
-                  <td>#<%= Order.order_number(order) %></td>
-                  <td><%= formatted_date(order.ordered_at) %></td>
-                  <td class="text-success"><%= format_decimal_as_currency(order.gross_profit) %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div
-      id="stamp_cost-accordion-item"
-      class="accordion-item"
-      phx-hook="accordionHook"
-      data-info="stamp_cost"
-    >
-      <div class="accordion-header" phx-update="ignore">
-        <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#stamp_cost-collapse"
-        >
-          Stamp Cost:
-          <span class="text-danger ms-2"><%= format_decimal_as_currency(@statistics.stamp_cost) %></span>
-          <span class="ms-1">(<%= @statistics.stamp_cost_percentage %>%)</span>
-        </button>
-      </div>
-      <div id="stamp_cost-collapse" class="accordion-collapse collapse" data-bs-parent="#sales-accordion">
-        <div class="accordion-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Order Number</th>
-                <th>Order Date</th>
-                <th>Stamp Cost</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= for order <- @orders do %>
-                <tr>
-                  <td>#<%= Order.order_number(order) %></td>
-                  <td><%= formatted_date(order.ordered_at) %></td>
-                  <td class="text-danger"><%= format_decimal_as_currency(order.stamp_cost) %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div
-      id="shipping_cost-accordion-item"
-      class="accordion-item"
-      phx-hook="accordionHook"
-      data-info="shipping_cost"
-    >
-      <div class="accordion-header" phx-update="ignore">
-        <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#shipping_cost-collapse"
-        >
-          Shipping Cost:
-          <span class="text-danger ms-2"><%= format_decimal_as_currency(@statistics.shipping_cost) %></span>
-          <span class="ms-1">(<%= @statistics.shipping_cost_percentage %>%)</span>
-        </button>
-      </div>
-      <div id="shipping_cost-collapse" class="accordion-collapse collapse" data-bs-parent="#sales-accordion">
-        <div class="accordion-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Order Number</th>
-                <th>Order Date</th>
-                <th>Shipping Cost</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= for order <- @orders do %>
-                <tr>
-                  <td>#<%= Order.order_number(order) %></td>
-                  <td><%= formatted_date(order.ordered_at) %></td>
-                  <td class="text-danger"><%= format_decimal_as_currency(order.shipping_cost) %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div
-      id="selling_fees-accordion-item"
-      class="accordion-item"
-      phx-hook="accordionHook"
-      data-info="selling_fees"
-    >
-      <div class="accordion-header" phx-update="ignore">
-        <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#selling_fees-collapse"
-        >
-          Selling Fees:
-            <span class="text-danger ms-2 me-1"><%= format_decimal_as_currency(@statistics.selling_fees) %></span>
-            (
-              <span class="text-danger me-1"><%= format_decimal_as_currency(@statistics.hipstamp_selling_fees) %></span> Hipstamp /
-              <span class="text-danger ms-1 me-1"><%= format_decimal_as_currency(@statistics.ebay_selling_fees) %></span> eBay)
-            <span class="ms-1">(<%= @statistics.selling_fees_percentage %>%)</span>
-        </button>
-      </div>
-      <div id="selling_fees-collapse" class="accordion-collapse collapse" data-bs-parent="#sales-accordion">
-        <div class="accordion-body">
-          <div id="inner-selling_fees-accordion" class="accordion">
-            <%= for {group_key, group_name} <- [hipstamp: "Hipstamp", ebay: "eBay"] do %>
-              <div id="<%= group_key %>_selling_fees-accordion-item" class="accordion-item">
-                <div class="accordion-header" phx-update="ignore">
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#<%= group_key%>_selling_fees-collapse"
-                  >
-                    <%= group_name %>:
-                    <span class="text-danger ms-2">
-                      <%= format_decimal_as_currency(
-                        Map.get(@statistics, String.to_existing_atom("#{group_key}_selling_fees"))
-                      ) %>
-                    </span>
-                  </button>
-                </div>
-                <div
-                  id="<%= group_key %>_selling_fees-collapse"
-                  class="accordion-collapse collapse"
-                  data-bs-parent="#inner-selling_fees-accordion"
-                >
-                  <div class="accordion_body">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th>Order Number</th>
-                          <th>Order Date</th>
-                          <th>Selling Fees</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <%= for order <- @orders, apply(Order, String.to_existing_atom("#{group_key}?"), [order]) do %>
-                          <tr>
-                            <td>#<%= Order.order_number(order) %></td>
-                            <td><%= formatted_date(order.ordered_at) %></td>
-                            <td class="text-danger"><%= format_decimal_as_currency(order.selling_fees) %></td>
-                          </tr>
-                        <% end %>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div
-      id="net_profit-accordion-item"
-      class="accordion-item"
-      phx-hook="accordionHook"
-      data-info="net_profit"
-    >
-      <div class="accordion-header" phx-update="ignore">
-        <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#net_profit-collapse"
-        >
-          Net Profit:
-          <span class="text-danger ms-2"><%= format_decimal_as_currency(@statistics.net_profit) %></span>
-          <span class="ms-1">(<%= @statistics.net_profit_percentage %>%)</span>
-        </button>
-      </div>
-      <div id="net_profit-collapse" class="accordion-collapse collapse" data-bs-parent="#sales-accordion">
-        <div class="accordion-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Order Number</th>
-                <th>Order Date</th>
-                <th>Net Profit</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= for order <- @orders do %>
-                <tr>
-                  <td>#<%= Order.order_number(order) %></td>
-                  <td><%= formatted_date(order.ordered_at) %></td>
-                  <td class="text-danger"><%= format_decimal_as_currency(order.net_profit) %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th colspan="3">Sales</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td colspan="2">Gross Sales</td>
+        <td><%= format_decimal_as_currency(@statistics.gross_sales) %></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>Hipstamp</td>
+        <td>
+          <%= format_decimal_as_currency(@statistics.hipstamp_sales) %>
+          <span class="ms-1">(<%= @statistics.hipstamp_sales_percentage %>%)</span>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>eBay</td>
+        <td>
+          <%= format_decimal_as_currency(@statistics.ebay_sales) %>
+          <span class="ms-1">(<%= @statistics.ebay_sales_percentage %>%)</span>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">Stamp Cost</td>
+        <td><%= format_decimal_as_currency(@statistics.stamp_cost) %></td>
+      </tr>
+      <tr>
+        <td colspan="2">Shipping Cost</td>
+        <td><%= format_decimal_as_currency(@statistics.shipping_cost) %></td>
+      </tr>
+      <tr>
+        <td colspan="2">Selling Fees</td>
+        <td><%= format_decimal_as_currency(@statistics.selling_fees) %></td>
+      </tr>
+      <tr>
+        <td colspan="2">Net Sales</td>
+        <td><%= format_decimal_as_currency(@statistics.net_sales) %></td>
+      </tr>
+    </tbody>
+  </table>
 </section>
