Rework statistics to reports

--- a/lib/kamansky_web/templates/layout/live.html.leex
+++ b/lib/kamansky_web/templates/layout/live.html.leex
@@ -51,14 +51,14 @@
               %>
             </li>
             <li>
-              <%= live_redirect "Stamp References",
-                to: Routes.stamp_reference_index_path(@socket, :index),
+              <%= live_redirect "Reports",
+                to: Routes.reports_index_path(@socket, :index),
                 class: "dropdown-item"
               %>
             </li>
             <li>
-              <%= live_redirect "Statistics",
-                to: Routes.statistics_index_path(@socket, :index),
+              <%= live_redirect "Stamp References",
+                to: Routes.stamp_reference_index_path(@socket, :index),
                 class: "dropdown-item"
               %>
             </li>
