--- a/lib/kamansky_web/live/reports_live/show.html.leex
+++ b/lib/kamansky_web/live/reports_live/show.html.leex
@@ -15,7 +15,7 @@
         <td></td>
         <td>Hipstamp</td>
         <td>
-          <%= format_decimal_as_currency(@data.hipstamp_sales) %>
+          <%= format_decimal_as_currency(@data.hipstamp_gross_sales) %>
           <span class="ms-1">(<%= @data.hipstamp_sales_percentage %>%)</span>
         </td>
       </tr>
@@ -23,7 +23,7 @@
         <td></td>
         <td>eBay</td>
         <td>
-          <%= format_decimal_as_currency(@data.ebay_sales) %>
+          <%= format_decimal_as_currency(@data.ebay_gross_sales) %>
           <span class="ms-1">(<%= @data.ebay_sales_percentage %>%)</span>
         </td>
       </tr>
