--- a/lib/kamansky_web/live/reports_live/show.html.leex
+++ b/lib/kamansky_web/live/reports_live/show.html.leex
@@ -72,6 +72,10 @@
         <td colspan="2">Stamps</td>
         <td class="text-danger"><%= format_decimal_as_currency(@expense_data.stamp_cost) %></td>
       </tr>
+      <tr>
+        <td colspan="2">Platform Fees</td>
+        <td class="text-danger"><%= format_decimal_as_currency(@expense_data.platform_fees) %></td>
+      </tr>
     </tbody>
   </table>
 </section>
