--- a/lib/kamansky_web/live/reports_live/index.html.leex
+++ b/lib/kamansky_web/live/reports_live/index.html.leex
@@ -3,7 +3,7 @@
     <thead>
       <tr>
         <th>Month</th>
-        <th>Gross Profit</th>
+        <th>Gross Sales</th>
         <th>Expenses</th>
         <th>Net Profit/Loss</th>
       </tr>
@@ -20,8 +20,8 @@
                 to: Routes.reports_show_path(@socket, :index, year: year, month: month)
               %>
             </td>
-            <td><%= data.gross_sales %></td>
-            <td>Expenses</td>
+            <td><%= format_decimal_as_currency(data.gross_sales) %></td>
+            <td><%= format_decimal_as_currency(data.total_expenses) %></td>
             <td>Net Profit/Loss</td>
           </tr>
         <% end %>
