--- a/lib/kamansky_web/live/dashboard_live/index.html.leex
+++ b/lib/kamansky_web/live/dashboard_live/index.html.leex
@@ -26,7 +26,7 @@
         <p class="card-text">
           <ul class="list-unstyled">
             <li>Total cost: <%= format_decimal_as_currency(@data.listed_cost) %></li>
-            <li>Total listing price: <%= format_decimal_as_currency(@data.listing_price) %></li>
+            <li>Total listing price: <%= format_decimal_as_currency(@data.total_listing_price) %></li>
           </ul>
         </p>
       </div>
